OAuth instead of App Password. Added API for taking readings from associated sensors and fetching readings between dates
